--- a/src/components/topbar/topbar.scss
+++ b/src/components/topbar/topbar.scss
@@ -14,6 +14,7 @@ a {
     top: 0;
     transition: all 140ms ease;
     box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.15);
+    overflow: hidden;
     
     
     .wrapper{    
